--- a/casino/landing-a_index.html
+++ b/casino/landing-a_index.html
@@ -2,15 +2,13 @@
 
 <html data-theme="light" lang="ko">
 <head>
-<meta charset="utf-8"/>
+<meta charset="utf-8"/><meta content="입플, 보너스, 페이백, 롤링, 출금 규정, 체크리스트, EV 계산기, 배당 마진" name="keywords"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>입플·보너스·페이백 분석기 | 88 커뮤니티</title>
-<meta content="입플/보너스/페이백 혜택 + 배당 마진·EV 분석기로 빠르게 비교하세요." name="description"/>
+<title>입플·보너스·페이백 분석기 | 88ST</title>
+<meta content="입플/보너스/페이백 조건과 체크리스트, 계산기 링크를 한 곳에서 확인하세요." name="description"/>
 <link href="https://88st.cloud/landing-a/" rel="canonical"/>
 <meta content="noindex,follow" name="robots"/>
-
-
-<link rel="stylesheet" href="/assets/css/x.379127f7099b.css"/>
+<link href="/assets/css/x.379127f7099b.css" rel="stylesheet"/>
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
@@ -37,7 +35,7 @@
 <script defer="" src="/assets/js/j.efba3509e62c.js"></script>
 <link href="/assets/c.a50dd3bc5b33.css" rel="stylesheet"/>
 <script defer="" src="/assets/js/j.8829a3ccde44.js"></script>
-</head>
+<meta content="입플·보너스·페이백 분석기 | 88ST" property="og:title"/><meta content="입플/보너스/페이백 조건과 체크리스트, 계산기 링크를 한 곳에서 확인하세요." property="og:description"/><meta content="website" property="og:type"/><meta content="https://88st.cloud/landing-a/" property="og:url"/><meta content="/img/logo.png" property="og:image"/></head>
 <body>
 <div class="wrap">
 <div class="hero">
@@ -58,6 +56,6 @@
 </div>
 </div>
 <script src="../assets/js/inline-bundles/b.dff6980afd.js"></script>
-<script src="/assets/js/j.025d649c8b11.js" defer></script>
+<script defer="" src="/assets/js/j.025d649c8b11.js"></script>
 </body>
 </html>
