--- a/cert/index.html
+++ b/cert/index.html
@@ -1,153 +1,140 @@
-<!doctype html>
-<html lang="ko" data-theme="light">
+<!DOCTYPE html>
+
+<html data-theme="light" lang="ko">
 <head>
-  <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width,initial-scale=1"/>
-  <title>인증사이트 | 안전한 토토사이트 안내 · 88ST</title>
-  <meta name="description" content="안전한 토토사이트 선택을 돕는 인증사이트 모음. 가입코드/혜택/주의사항을 한 화면에서 확인하고, 즐겨찾기와 최근 기록으로 빠르게 재방문하세요."/>
-  <meta name="keywords" content="안전한토토사이트, 안전 토토사이트, 인증사이트, 보증사이트, 먹튀검증, 가입코드, 입플, 페이백, 스포츠분석기, 미니게임분석기, 카지노전략분석기, 슬롯환수율"/>
-  <meta name="robots" content="index,follow"/>
-  <meta property="og:title" content="인증사이트 | 안전한 토토사이트 안내 · 88ST"/>
-  <meta property="og:description" content="안전한 토토사이트 선택을 돕는 인증사이트 모음. 가입코드/혜택/주의사항을 한 화면에서 확인하세요."/>
-  <meta property="og:type" content="website"/>
-  <meta property="og:image" content="/img/logo.png"/>
-  <link rel="icon" href="/favicon.ico" type="image/x-icon"/>
-  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"/>
-  <link rel="canonical" href="https://88st.cloud/cert/"/>
-
-  <link rel="stylesheet" href="/assets/c.c603748c04b2.css"/>
-
-  <script defer src="/assets/js/j.8829a3ccde44.js"></script>
-  <script defer src="/assets/js/j.9179477b9417.js"></script>
-</head>
+<meta charset="utf-8"/>
+<meta content="width=device-width,initial-scale=1" name="viewport"/>
+<title>인증사이트 | 가입코드·혜택·출금규정 체크 | 88ST</title>
+<meta content="가입코드/혜택/주의사항을 한 화면에서 비교하고, 즐겨찾기·최근 기록으로 빠르게 재방문하는 인증사이트 카드 모음입니다. 가입 전 롤링/출금/제한 규정은 반드시 재확인하세요." name="description"/>
+<meta content="인증사이트, 보증사이트, 안전한 사이트 체크리스트, 가입코드, 혜택 비교, 출금 규정, 롤링 조건, 제외 게임, 페이백, 첫충, 입플" name="keywords"/>
+<meta content="index,follow" name="robots"/>
+<meta content="인증사이트 | 가입코드·혜택·출금규정 체크 | 88ST" property="og:title"/>
+<meta content="가입코드/혜택/주의사항을 한 화면에서 비교하고, 즐겨찾기·최근 기록으로 빠르게 재방문하는 인증사이트 카드 모음입니다. 가입 전 롤링/출금/제한 규정은 반드시 재확인하세요." property="og:description"/>
+<meta content="website" property="og:type"/>
+<meta content="/img/logo.png" property="og:image"/>
+<link href="/favicon.ico" rel="icon" type="image/x-icon"/>
+<link href="/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
+<link href="https://88st.cloud/cert/" rel="canonical"/>
+<link href="/assets/c.c603748c04b2.css" rel="stylesheet"/>
+<script defer="" src="/assets/js/j.8829a3ccde44.js"></script>
+<script defer="" src="/assets/js/j.9179477b9417.js"></script>
+<meta content="https://88st.cloud/cert/" property="og:url"/></head>
 <body>
-  <main class="cert-wrap">
-    <section class="cert-hero">
-      <div class="cert-hero-grid">
-        <div class="cert-hero-main">
-          <h1>인증사이트</h1>
-          <p>
+<main class="cert-wrap">
+<section class="cert-hero">
+<div class="cert-hero-grid">
+<div class="cert-hero-main">
+<h1>인증사이트</h1>
+<p>
             보증·인증 카드를 한 곳에 모아 <span class="cert-em">가입코드</span>, <span class="cert-em">혜택</span>, <span class="cert-em">주의사항</span>을
             빠르게 비교할 수 있도록 정리했습니다.
             <br/>
             검색/정렬로 필요한 카드만 골라보고, 즐겨찾기/최근 기록으로 재방문도 쉽게 관리하세요.
           </p>
-
-          <div class="cert-actions">
-            <a class="cert-btn primary" href="#certList">카드 목록 보기 →</a>
-            <a class="cert-btn" href="/bonus-checklist/">입플 체크리스트</a>
-            <a class="cert-btn" href="https://t.me/UZU59" target="_blank" rel="noopener noreferrer">문의 (텔레그램)</a>
-          </div>
-
-          <p class="cert-hero-note">
+<div class="cert-actions">
+<a class="cert-btn primary" href="#certList">카드 목록 보기 →</a>
+<a class="cert-btn" href="/bonus-checklist/">입플 체크리스트</a>
+<a class="cert-btn" href="https://t.me/UZU59" rel="noopener noreferrer" target="_blank">문의 (텔레그램)</a>
+</div>
+<p class="cert-hero-note">
             ※ 카드 내용은 참고용이며, 조건/혜택은 수시로 변경될 수 있습니다. 가입 전 공지/문의로 재확인하세요.
           </p>
-        </div>
-
-        <div class="cert-hero-side" aria-label="빠른 안내">
-          <div class="cert-side-card">
-            <div class="k">3-STEP 사용법</div>
-            <ol>
-              <li>카드를 눌러 <b>가입코드/혜택/주의</b>를 확인</li>
-              <li>필요하면 <b>코드 복사</b> 후 바로 이동</li>
-              <li>가입 전 <b>롤링/출금/제한</b> 조건을 다시 체크</li>
-            </ol>
-          </div>
-          <div class="cert-side-card">
-            <div class="k">안전 체크 포인트</div>
-            <ul>
-              <li>최대 지급·환전 속도·출금 제한</li>
-              <li>보너스 롤링/게임 제외 조건</li>
-              <li>문의 채널/운영 공지 업데이트</li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section class="cert-grid-panel" id="certList" aria-label="인증사이트 카드 목록">
-      <div class="vendor-tools">
-        <div class="v-left">
-          <input id="searchInput" class="v-input" type="search" placeholder="검색 (업체명/코드/혜택/주의)" autocomplete="off" />
-        </div>
-        <div class="v-right">
-          <select id="filterSelect" class="v-select" aria-label="필터">
-            <option value="all">전체</option>
-            <option value="guarantee">상단 추천</option>
-            <option value="verified">그 외</option>
-            <option value="rec">추천</option>
-            <option value="new">신규</option>
-          </select>
-          <select id="sortSelect" class="v-select" aria-label="정렬">
-            <option value="default">기본 정렬</option>
-            <option value="pop">인기순</option>
-          </select>
-          <label class="v-toggle" title="혜택 텍스트 정리">
-            <input id="toggleClean" type="checkbox"/>
+</div>
+<div aria-label="빠른 안내" class="cert-hero-side">
+<div class="cert-side-card">
+<div class="k">3-STEP 사용법</div>
+<ol>
+<li>카드를 눌러 <b>가입코드/혜택/주의</b>를 확인</li>
+<li>필요하면 <b>코드 복사</b> 후 바로 이동</li>
+<li>가입 전 <b>롤링/출금/제한</b> 조건을 다시 체크</li>
+</ol>
+</div>
+<div class="cert-side-card">
+<div class="k">안전 체크 포인트</div>
+<ul>
+<li>최대 지급·환전 속도·출금 제한</li>
+<li>보너스 롤링/게임 제외 조건</li>
+<li>문의 채널/운영 공지 업데이트</li>
+</ul>
+</div>
+</div>
+</div>
+</section>
+<section aria-label="인증사이트 카드 목록" class="cert-grid-panel" id="certList">
+<div class="vendor-tools">
+<div class="v-left">
+<input autocomplete="off" class="v-input" id="searchInput" placeholder="검색 (업체명/코드/혜택/주의)" type="search"/>
+</div>
+<div class="v-right">
+<select aria-label="필터" class="v-select" id="filterSelect">
+<option value="all">전체</option>
+<option value="guarantee">상단 추천</option>
+<option value="verified">그 외</option>
+<option value="rec">추천</option>
+<option value="new">신규</option>
+</select>
+<select aria-label="정렬" class="v-select" id="sortSelect">
+<option value="default">기본 정렬</option>
+<option value="pop">인기순</option>
+</select>
+<label class="v-toggle" title="혜택 텍스트 정리">
+<input id="toggleClean" type="checkbox"/>
             텍스트 정리
           </label>
-        </div>
-      </div>
-
-      <div id="emptyHint" class="cert-empty" style="display:none;">검색 결과가 없습니다. 다른 키워드로 다시 검색해보세요.</div>
-      <div class="vendor-grid" id="vendorGrid"></div>
-    </section>
-
-    <section class="cert-howto" aria-label="이용 안내">
-      <div class="cert-card">
-        <h2>이용 방법</h2>
-        <ul>
-          <li><span class="cert-em">카드를 클릭</span>하면 상세 팝업이 열립니다.</li>
-          <li>팝업에서 <span class="cert-em">가입코드 복사</span> → 사이트 이동 순으로 진행하세요.</li>
-          <li>자주 쓰는 카드는 <span class="cert-em">즐겨찾기</span>로 저장해두면 더 빠릅니다.</li>
-        </ul>
-      </div>
-      <div class="cert-card">
-        <h2>안전한 토토사이트 체크</h2>
-        <p>
+</div>
+</div>
+<div class="cert-empty" id="emptyHint" style="display:none;">검색 결과가 없습니다. 다른 키워드로 다시 검색해보세요.</div>
+<div class="vendor-grid" id="vendorGrid"></div>
+</section>
+<section aria-label="이용 안내" class="cert-howto">
+<div class="cert-card">
+<h2>이용 방법</h2>
+<ul>
+<li><span class="cert-em">카드를 클릭</span>하면 상세 팝업이 열립니다.</li>
+<li>팝업에서 <span class="cert-em">가입코드 복사</span> → 사이트 이동 순으로 진행하세요.</li>
+<li>자주 쓰는 카드는 <span class="cert-em">즐겨찾기</span>로 저장해두면 더 빠릅니다.</li>
+</ul>
+</div>
+<div class="cert-card">
+<h2>안전한 토토사이트 체크</h2>
+<p>
           “좋아 보이는 문구”보다 <span class="cert-em">조건/롤링/제외게임/최대지급/출금</span> 같은 항목을 먼저 확인하는 게 핵심입니다.
           입플·페이백 조건은 수시로 바뀔 수 있으니, 팝업의 <span class="cert-em">주의사항</span>도 꼭 확인하세요.
         </p>
-      </div>
-    </section>
-
-    <details class="seo-details">
-      <summary>SEO / 안내</summary>
-      <div class="seo-text">
-        <p>
+</div>
+</section>
+<details class="seo-details">
+<summary>SEO / 안내</summary>
+<div class="seo-text">
+<p>
           안전한토토사이트, 안전 토토사이트, 인증사이트, 보증사이트, 먹튀검증, 입금플러스, 페이백, 가입코드, 스포츠배당분석기, 미니게임분석기, 카지노전략분석기, 슬롯환수율 분석기.
         </p>
-        <p>
+<p>
           본 페이지는 “선택을 돕는 안내” 목적이며, 최종 이용 조건은 각 사이트 공지/규정에 따릅니다.
         </p>
-      </div>
-    </details>
-  </main>
-
-  <div id="copyToast" aria-live="polite">가입코드가 복사되었습니다</div>
-
-  <div class="popup" id="cardPopup" role="dialog" aria-modal="true" aria-hidden="true">
-    <div class="popup-box" role="document">
-      <button class="popup-close" id="closeBtn" aria-label="닫기">✕</button>
-      <h3 class="popup-title" id="pTitle">업체명</h3>
-      <p class="popup-sub">가입코드: <span id="pCode"></span></p>
-
-      <div class="popup-meta">
-        <div class="line" id="pBenefit" style="display:none;"></div>
-        <div class="line" id="pNotice" style="display:none;"></div>
-      </div>
-
-      <div class="popup-actions">
-        <button class="btn" id="copyBtn">코드 복사</button>
-        <a class="btn primary" id="pLink" data-no-auto-outbound="1" data-outbound-manual="1" href="#" target="_blank" rel="noopener noreferrer">사이트 이동</a>
-        <a class="btn" id="pTelegram" data-no-auto-outbound="1" data-outbound-manual="1" href="https://t.me/UZU59" target="_blank" rel="noopener noreferrer">문의 (텔레그램)</a>
-        <button class="btn" id="favBtn">☆ 즐겨찾기</button>
-      </div>
-    </div>
-  </div>
-
-  <script defer src="/assets/js/j.64302c75fe3a.js"></script>
-  <script type="application/ld+json">
+</div>
+</details>
+</main>
+<div aria-live="polite" id="copyToast">가입코드가 복사되었습니다</div>
+<div aria-hidden="true" aria-modal="true" class="popup" id="cardPopup" role="dialog">
+<div class="popup-box" role="document">
+<button aria-label="닫기" class="popup-close" id="closeBtn">✕</button>
+<h3 class="popup-title" id="pTitle">업체명</h3>
+<p class="popup-sub">가입코드: <span id="pCode"></span></p>
+<div class="popup-meta">
+<div class="line" id="pBenefit" style="display:none;"></div>
+<div class="line" id="pNotice" style="display:none;"></div>
+</div>
+<div class="popup-actions">
+<button class="btn" id="copyBtn">코드 복사</button>
+<a class="btn primary" data-no-auto-outbound="1" data-outbound-manual="1" href="#" id="pLink" rel="noopener noreferrer" target="_blank">사이트 이동</a>
+<a class="btn" data-no-auto-outbound="1" data-outbound-manual="1" href="https://t.me/UZU59" id="pTelegram" rel="noopener noreferrer" target="_blank">문의 (텔레그램)</a>
+<button class="btn" id="favBtn">☆ 즐겨찾기</button>
+</div>
+</div>
+</div>
+<script defer="" src="/assets/js/j.64302c75fe3a.js"></script>
+<script type="application/ld+json">
   {
     "@context":"https://schema.org",
     "@type":"WebPage",
@@ -156,6 +143,6 @@
     "description":"안전한 토토사이트 선택을 돕는 인증사이트 모음. 가입코드/혜택/주의사항을 한 화면에서 확인하고, 즐겨찾기와 최근 기록으로 빠르게 재방문하세요."
   }
   </script>
-<script src="/assets/js/j.025d649c8b11.js" defer></script>
+<script defer="" src="/assets/js/j.025d649c8b11.js"></script>
 </body>
 </html>
