--- a/ipl/index.html
+++ b/ipl/index.html
@@ -2,20 +2,19 @@
 
 <html data-theme="light" lang="ko">
 <head>
-<meta charset="utf-8"/>
+<meta charset="utf-8"/><meta content="입금플러스, 입플 조건, 첫충, 재충 보너스, 페이백, 롤링, 출금 조건, 환전 조건, 제외 게임, 보너스 약관" name="keywords"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>입금플러스(입플)·보너스·페이백 조건 정리 | 88 커뮤니티</title>
-<meta content="입금플러스(입플)·보너스·페이백 조건을 한눈에 정리하고, 롤링/제한/환전 주의사항과 고액 유저 기준 검증 포인트를 안내합니다. 텔레그램 문의 지원." name="description"/>
+<title>입금플러스(입플)·첫충·페이백 조건 정리 | 88ST</title>
+<meta content="입금플러스(입플)·첫충·재충·페이백 조건을 한눈에 정리하고, 롤링/제외게임/환전/기간/최대지급 규정을 빠르게 확인하세요." name="description"/>
 <link href="https://88st.cloud/ipl/" rel="canonical"/>
 <meta content="index,follow" name="robots"/>
 <meta content="website" property="og:type"/>
 <meta content="88 커뮤니티" property="og:site_name"/>
-<meta content="입플·보너스·페이백 조건 정리 | 88 커뮤니티" property="og:title"/>
-<meta content="입플/보너스 조건·주의사항·검증 포인트를 한 번에 확인하세요." property="og:description"/>
+<meta content="입금플러스(입플)·첫충·페이백 조건 정리 | 88ST" property="og:title"/>
+<meta content="입금플러스(입플)·첫충·재충·페이백 조건을 한눈에 정리하고, 롤링/제외게임/환전/기간/최대지급 규정을 빠르게 확인하세요." property="og:description"/>
 <meta content="https://88st.cloud/ipl/" property="og:url"/>
 <link href="/favicon.ico" rel="icon" type="image/x-icon"/>
-
-<link rel="stylesheet" href="/assets/css/x.7bcc79648a48.css"/>
+<link href="/assets/css/x.7bcc79648a48.css" rel="stylesheet"/>
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
@@ -42,7 +41,7 @@
 <script defer="" src="/assets/js/j.efba3509e62c.js"></script>
 <link href="/assets/c.a50dd3bc5b33.css" rel="stylesheet"/>
 <script defer="" src="/assets/js/j.8829a3ccde44.js"></script>
-</head>
+<meta content="/img/logo.png" property="og:image"/></head>
 <body>
 <div class="scam-popup" id="scamPopup">
 <div class="scam-box">
@@ -133,6 +132,6 @@
   </div>
 </div>
 <script src="../assets/js/inline-bundles/b.eaed75994b05.js"></script>
-<script src="/assets/js/j.025d649c8b11.js" defer></script>
+<script defer="" src="/assets/js/j.025d649c8b11.js"></script>
 </body>
 </html>
