--- a/landing-c/index.html
+++ b/landing-c/index.html
@@ -4,22 +4,18 @@
 <head>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>배당 마진·EV 계산 가이드 (2-way/3-way) + 무료 분석기 | 88</title>
-<meta content="배당 마진(오버라운드)과 EV(+EV) 개념을 쉽게 정리하고, 2-way/3-way 입력으로 빠르게 계산하는 무료 분석기 사용법을 안내합니다." name="description"/>
+<title>랜딩 페이지 | 이동 안내 | 88ST</title>
+<meta content="클릭 한 번으로 이동하는 88ST 랜딩 페이지입니다." name="description"/>
 <link href="https://88st.cloud/landing-c/" rel="canonical"/>
-<meta content="index,follow" name="robots"/>
+<meta content="noindex,follow" name="robots"/>
 <meta content="website" property="og:type"/>
 <meta content="88 (팔팔커뮤니티)" property="og:site_name"/>
-<meta content="배당 마진·EV 계산 가이드 (2-way/3-way) + 무료 분석기 | 88" property="og:title"/>
-<meta content="배당 마진(오버라운드)과 EV(+EV) 개념을 쉽게 정리하고, 2-way/3-way 입력으로 빠르게 계산하는 무료 분석기 사용법을 안내합니다." property="og:description"/>
+<meta content="랜딩 페이지 | 이동 안내 | 88ST" property="og:title"/>
+<meta content="클릭 한 번으로 이동하는 88ST 랜딩 페이지입니다." property="og:description"/>
 <meta content="https://88st.cloud/landing-c/" property="og:url"/>
 <link href="/favicon.ico" rel="icon" type="image/x-icon"/>
 <link href="/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
-
-
-
-
-<link rel="stylesheet" href="/assets/css/x.b8b39f0ff21f.css"/>
+<link href="/assets/css/x.b8b39f0ff21f.css" rel="stylesheet"/>
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
@@ -48,7 +44,7 @@
 <script defer="" src="/assets/js/j.efba3509e62c.js"></script>
 <link href="/assets/c.a50dd3bc5b33.css" rel="stylesheet"/>
 <script defer="" src="/assets/js/j.8829a3ccde44.js"></script>
-</head>
+<meta content="/img/logo.png" property="og:image"/></head>
 <body>
 <div class="wrap">
 <div class="top">
@@ -57,9 +53,9 @@
 <div class="t">88st.cloud</div>
 </div>
 <div class="nav">
-<a data-utm="1" href="/" data-d8593ac4d="VVlZE1MNTL82">메인</a>
-<a data-utm="1" href="/analysis/" data-d8593ac4d="IQUWUhOYKhO-">분석기</a>
-<a data-utm="1" href="/cert/" data-d8593ac4d="gW_o8eCDzzXf">인증놀이터</a>
+<a data-d8593ac4d="VVlZE1MNTL82" data-utm="1" href="/">메인</a>
+<a data-d8593ac4d="IQUWUhOYKhO-" data-utm="1" href="/analysis/">분석기</a>
+<a data-d8593ac4d="gW_o8eCDzzXf" data-utm="1" href="/cert/">인증놀이터</a>
 </div>
 </div>
 <div class="hero">
@@ -69,10 +65,10 @@
 <div class="pill">마진(오버라운드)</div><div class="pill">EV(+EV)</div><div class="pill">2-way/3-way</div><div class="pill">무료 계산</div><div class="pill">라인 비교</div>
 </div>
 <div class="ctaRow">
-<a class="btn primary" data-utm="1" href="/analysis/" data-d8593ac4d="s9pWmjDKIfIq">
+<a class="btn primary" data-d8593ac4d="s9pWmjDKIfIq" data-utm="1" href="/analysis/">
            무료 분석기 사용하기
         </a>
-<a class="btn secondary" data-utm="1" href="/cert/" data-d8593ac4d="LF6LzB80w3-c">
+<a class="btn secondary" data-d8593ac4d="LF6LzB80w3-c" data-utm="1" href="/cert/">
            88 인증놀이터 바로보기
         </a>
 </div>
@@ -109,13 +105,13 @@
 <div class="footer">
 <div>© 88 (팔팔커뮤니티) · 88st.cloud</div>
 <div class="smallLinks">
-<a data-utm="1" href="/landing-a/" data-d8593ac4d="WwoscFn_6d5t">입플·보너스</a>
-<a data-utm="1" href="/landing-b/" data-d8593ac4d="HeNiuBH6qdIz">고액/보증업체</a>
-<a data-utm="1" href="/landing-c/" data-d8593ac4d="m22e10u_2S1e">마진·EV</a>
-<a data-utm="1" href="/landing-d/" data-d8593ac4d="J6mE9f29a2tJ">배당 흐름</a>
+<a data-d8593ac4d="WwoscFn_6d5t" data-utm="1" href="/landing-a/">입플·보너스</a>
+<a data-d8593ac4d="HeNiuBH6qdIz" data-utm="1" href="/landing-b/">고액/보증업체</a>
+<a data-d8593ac4d="m22e10u_2S1e" data-utm="1" href="/landing-c/">마진·EV</a>
+<a data-d8593ac4d="J6mE9f29a2tJ" data-utm="1" href="/landing-d/">배당 흐름</a>
 </div>
 </div>
 </div>
-<script src="/assets/js/j.025d649c8b11.js" defer></script>
+<script defer="" src="/assets/js/j.025d649c8b11.js"></script>
 </body>
 </html>
