--- a/bonus-checklist/index.html
+++ b/bonus-checklist/index.html
@@ -2,17 +2,16 @@
 
 <html data-theme="light" lang="ko">
 <head>
-<meta charset="utf-8"/>
+<meta charset="utf-8"/><meta content="입플 체크리스트, 입금플러스, 첫충 보너스, 페이백 조건, 롤링 조건, 출금 규정, 제외 게임, 최대 지급, 보너스 이용약관, 카지노 입플, 슬롯 입플" name="keywords"/>
 <meta content="width=device-width,initial-scale=1" name="viewport"/>
-<title>입플사이트 체크리스트 | 카지노입플·슬롯입플 조건 확인 가이드 88</title>
-<meta content="입플사이트(입금플러스) 이용 전 카지노입플·슬롯입플 조건을 10초 체크리스트로 점검하세요. 롤링/제외게임/최대지급/기간/출금 규정까지 한눈에 정리. 배당 마진·EV·확률 계산기와 함께 제공합니다." name="description"/>
-<meta content="입플사이트 체크리스트 | 카지노입플·슬롯입플 조건 10초 점검 (88)" property="og:title"/>
-<meta content="입플/첫충/페이백 조건을 빠르게 정리하고, 롤링·제외게임·최대지급·기간·출금 규정을 체크하세요." property="og:description"/>
+<title>입플 체크리스트 | 롤링·제외게임·출금규정 10초 점검 | 88ST</title>
+<meta content="입플(입금플러스)·첫충·페이백 보너스 이용 전, 롤링/제외게임/최대지급/기간/출금 규정을 10초 체크리스트로 점검하세요. 조건 비교 팁과 계산기 링크까지 정리." name="description"/>
+<meta content="입플 체크리스트 | 롤링·제외게임·출금규정 10초 점검 | 88ST" property="og:title"/>
+<meta content="입플(입금플러스)·첫충·페이백 보너스 이용 전, 롤링/제외게임/최대지급/기간/출금 규정을 10초 체크리스트로 점검하세요. 조건 비교 팁과 계산기 링크까지 정리." property="og:description"/>
 <meta content="website" property="og:type"/>
 <meta content="ko_KR" property="og:locale"/>
 <meta content="index,follow" name="robots"/>
-
-<link rel="stylesheet" href="/assets/css/x.e28fb3ebcc4c.css"/>
+<link href="/assets/css/x.e28fb3ebcc4c.css" rel="stylesheet"/>
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
@@ -39,7 +38,7 @@
 <script defer="" src="/assets/js/j.efba3509e62c.js"></script>
 <link href="/assets/c.a50dd3bc5b33.css" rel="stylesheet"/>
 <script defer="" src="/assets/js/j.8829a3ccde44.js"></script>
-</head>
+<link href="https://88st.cloud/bonus-checklist/" rel="canonical"/><meta content="https://88st.cloud/bonus-checklist/" property="og:url"/><meta content="/img/logo.png" property="og:image"/></head>
 <body>
 <div class="wrap">
 <div class="hero">
@@ -154,6 +153,6 @@
     ]
   }
   </script>
-<script src="/assets/js/j.025d649c8b11.js" defer></script>
+<script defer="" src="/assets/js/j.025d649c8b11.js"></script>
 </body>
 </html>
