--- a/casino-strategy/oscar-grind/index.html
+++ b/casino-strategy/oscar-grind/index.html
@@ -1,29 +1,26 @@
 <!DOCTYPE html>
+
 <html data-theme="light" lang="ko">
 <head>
-  <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>오스카 그라인드 배팅법 | 1유닛 목표 바카라 계산기</title>
-  <meta name="description" content="오스카 그라인드(Oscar’s Grind) 배팅법을 바카라 PLAYER 2.00 / BANKER 1.97 기준으로 계산합니다. 사이클 목표 이익(1유닛)을 달성하면 리셋하는 방식으로 운영하세요."/>
-  <meta name="keywords" content="오스카 그라인드 배팅법, 오스카 그라인드 계산기, 1유닛 목표 전략, 바카라 배팅전략, 리스크 관리"/>
-  <meta name="robots" content="index,follow"/>
-  <link rel="canonical" href="https://88st.cloud/casino-strategy/oscar-grind/"/>
-
-  <meta property="og:type" content="website"/>
-  <meta property="og:site_name" content="88 (팔팔커뮤니티)"/>
-  <meta property="og:title" content="오스카 그라인드 배팅법 | 1유닛 목표 바카라 계산기"/>
-  <meta property="og:description" content="오스카 그라인드(Oscar’s Grind) 배팅법을 바카라 PLAYER 2.00 / BANKER 1.97 기준으로 계산합니다. 사이클 목표 이익(1유닛)을 달성하면 리셋하는 방식으로 운영하세요."/>
-  <meta property="og:url" content="https://88st.cloud/casino-strategy/oscar-grind/"/>
-
-  <link rel="icon" href="/favicon.ico" type="image/x-icon"/>
-  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"/>
-
-  <link rel="stylesheet" href="/assets/c.a50dd3bc5b33.css"/>
-  <link rel="stylesheet" href="/assets/c.9995eeb5cf82.css"/>
-  <script defer src="/assets/js/j.8829a3ccde44.js"></script>
-  <link rel="stylesheet" href="/assets/c.40f97b2b9a20.css"/>
-
-  <script type="application/ld+json">
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<title>오스카 그라인드 배팅법 | 1유닛 목표 바카라 계산기 | 88ST</title>
+<meta content="오스카 그라인드(Oscar’s Grind) 배팅법을 바카라 PLAYER 2.00 / BANKER 1.97 기준으로 계산합니다. 사이클 목표 이익(1유닛)을 달성하면 리셋하는 방식으로 운영하세요." name="description"/>
+<meta content="오스카 그라인드 배팅법, 오스카 그라인드 계산기, 1유닛 목표 전략, 바카라 배팅전략, 리스크 관리" name="keywords"/>
+<meta content="index,follow" name="robots"/>
+<link href="https://88st.cloud/casino-strategy/oscar-grind/" rel="canonical"/>
+<meta content="website" property="og:type"/>
+<meta content="88 (팔팔커뮤니티)" property="og:site_name"/>
+<meta content="오스카 그라인드 배팅법 | 1유닛 목표 바카라 계산기 | 88ST" property="og:title"/>
+<meta content="오스카 그라인드(Oscar’s Grind) 배팅법을 바카라 PLAYER 2.00 / BANKER 1.97 기준으로 계산합니다. 사이클 목표 이익(1유닛)을 달성하면 리셋하는 방식으로 운영하세요." property="og:description"/>
+<meta content="https://88st.cloud/casino-strategy/oscar-grind/" property="og:url"/>
+<link href="/favicon.ico" rel="icon" type="image/x-icon"/>
+<link href="/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
+<link href="/assets/c.a50dd3bc5b33.css" rel="stylesheet"/>
+<link href="/assets/c.9995eeb5cf82.css" rel="stylesheet"/>
+<script defer="" src="/assets/js/j.8829a3ccde44.js"></script>
+<link href="/assets/c.40f97b2b9a20.css" rel="stylesheet"/>
+<script type="application/ld+json">
   {
     "@context":"https://schema.org",
     "@type":"BreadcrumbList",
@@ -34,8 +31,7 @@
     ]
   }
   </script>
-
-  <script type="application/ld+json">
+<script type="application/ld+json">
   {
   "@context": "https://schema.org",
   "@type": "FAQPage",
@@ -48,55 +44,51 @@
   ]
 }
   </script>
-</head>
+<meta content="/img/logo.png" property="og:image"/></head>
 <body class="st-app">
-  <main class="st-land-wrap">
-    <section class="st-land-hero">
-      <h1>오스카 그라인드</h1>
-      <p>‘1유닛 목표’에 맞춰 점진적으로 조정하는 오스카 그라인드 소개 페이지입니다.</p>
-      <div class="st-land-cta">
-        <a class="st-land-btn primary" href="/tool-casino/#oscar-grind">계산기 바로가기</a>
-        <a class="st-land-btn" href="/tool-casino/">카지노 전략 계산기</a>
-      </div>
-      <p class="st-land-note" style="margin-top:10px;">바카라 기준 프리셋: <b>PLAYER 2.00</b> / <b>BANKER 1.97</b> (커미션 반영). 스피드 조작형(WIN/LOSE)으로 즉시 계산합니다.</p>
-    </section>
-
-    <div class="st-land-grid">
-      <section class="st-land-card">
-        <h2>빠른 요약</h2>
-        <div class="st-facts">
-          <div class="fact"><div class="k">승리 시</div><div class="v">WIN 시 사이클 목표 이익이 달성될 때까지 1유닛씩 조정합니다.</div></div>
-          <div class="fact"><div class="k">패배 시</div><div class="v">LOSE 시 보통 베팅 유지(표준)로 사이클 손익을 추적합니다.</div></div>
-          <div class="fact"><div class="k">리스크 포인트</div><div class="v">사이클 중 손실이 누적될 수 있습니다. 목표이익/자금 한도와 함께 운영하세요.</div></div>
-        </div>
-      </section>
-
-      <section class="st-land-card st-sticky">
-        <h2>추천 사용 방식</h2>
-        <ul class="st-steps">
-          <li><div class="s">1</div><div class="d">기본 베팅(유닛)과 단위 올림(예: 1,000원)을 설정합니다.</div></li>
-          <li><div class="s">2</div><div class="d">PLAYER/BANKER 프리셋을 선택합니다.</div></li>
-          <li><div class="s">3</div><div class="d">라운드 결과에 따라 <b>WIN/LOSE</b>만 누릅니다. 다음 베팅이 즉시 갱신됩니다.</div></li>
-          <li><div class="s">4</div><div class="d">세션 손익/최대 낙폭(MDD)로 과몰입을 방지합니다.</div></li>
-        </ul>
-      </section>
-
-      <section class="st-land-card" style="grid-column:1/-1;">
-        <h2>예시</h2>
-        <p style="margin:0;">예: PLAYER(2.00), 기본 10,000원. 사이클 손익이 기본 1승 수익(10,000원)에 도달하면 리셋합니다.</p>
-        <p class="st-land-note" style="margin-top:10px;">※ 실제 결과는 변동성이 큽니다. 참고용 도구로만 사용해 주세요.</p>
-      </section>
-
-      <section class="st-land-card st-faq" style="grid-column:1/-1;">
-        <h2>FAQ</h2>
-        <details><summary>오스카 그라인드은(는) 몇 연패까지 버티나요?</summary><div class="st-land-note" style="margin-top:8px;">자금(뱅크롤), 기본베팅, 배당(특히 BANKER 1.97)과 단위 올림에 따라 달라집니다. 계산기에서 자금(선택)을 입력하면 세션 손익과 최대 낙폭을 함께 확인할 수 있습니다.</div></details>
-        <details><summary>BANKER 1.97에서 베팅이 더 커지는 이유는?</summary><div class="st-land-note" style="margin-top:8px;">승리 수익이 <b>베팅×(배당-1)</b>이기 때문에, BANKER는 (1.97-1)=0.97로 PLAYER(1.0)보다 회복에 필요한 베팅이 커질 수 있습니다.</div></details>
-        <details><summary>단위 올림(라운딩)은 왜 필요한가요?</summary><div class="st-land-note" style="margin-top:8px;">실전에서는 특정 단위(1,000/10,000원)로 베팅하는 경우가 많습니다. 라운딩을 적용하면 실제 베팅 환경과 더 잘 맞습니다.</div></details>
-        <details><summary>세션/자금 관리 트래커는 뭘 보여주나요?</summary><div class="st-land-note" style="margin-top:8px;">세션 손익(P/L), 최대 낙폭(MDD), 현재 단계와 최근 라운드 로그를 통해 현재 위험도를 한눈에 보여줍니다.</div></details>
-        <details><summary>이 전략은 수익을 보장하나요?</summary><div class="st-land-note" style="margin-top:8px;">어떤 배팅기법도 수익을 보장하지 않습니다. 변동성과 한도/규정/커미션 등의 변수가 크므로 책임감 있게 이용해 주세요.</div></details>
-      </section>
-    </div>
-  </main>
-<script src="/assets/js/j.025d649c8b11.js" defer></script>
+<main class="st-land-wrap">
+<section class="st-land-hero">
+<h1>오스카 그라인드</h1>
+<p>‘1유닛 목표’에 맞춰 점진적으로 조정하는 오스카 그라인드 소개 페이지입니다.</p>
+<div class="st-land-cta">
+<a class="st-land-btn primary" href="/tool-casino/#oscar-grind">계산기 바로가기</a>
+<a class="st-land-btn" href="/tool-casino/">카지노 전략 계산기</a>
+</div>
+<p class="st-land-note" style="margin-top:10px;">바카라 기준 프리셋: <b>PLAYER 2.00</b> / <b>BANKER 1.97</b> (커미션 반영). 스피드 조작형(WIN/LOSE)으로 즉시 계산합니다.</p>
+</section>
+<div class="st-land-grid">
+<section class="st-land-card">
+<h2>빠른 요약</h2>
+<div class="st-facts">
+<div class="fact"><div class="k">승리 시</div><div class="v">WIN 시 사이클 목표 이익이 달성될 때까지 1유닛씩 조정합니다.</div></div>
+<div class="fact"><div class="k">패배 시</div><div class="v">LOSE 시 보통 베팅 유지(표준)로 사이클 손익을 추적합니다.</div></div>
+<div class="fact"><div class="k">리스크 포인트</div><div class="v">사이클 중 손실이 누적될 수 있습니다. 목표이익/자금 한도와 함께 운영하세요.</div></div>
+</div>
+</section>
+<section class="st-land-card st-sticky">
+<h2>추천 사용 방식</h2>
+<ul class="st-steps">
+<li><div class="s">1</div><div class="d">기본 베팅(유닛)과 단위 올림(예: 1,000원)을 설정합니다.</div></li>
+<li><div class="s">2</div><div class="d">PLAYER/BANKER 프리셋을 선택합니다.</div></li>
+<li><div class="s">3</div><div class="d">라운드 결과에 따라 <b>WIN/LOSE</b>만 누릅니다. 다음 베팅이 즉시 갱신됩니다.</div></li>
+<li><div class="s">4</div><div class="d">세션 손익/최대 낙폭(MDD)로 과몰입을 방지합니다.</div></li>
+</ul>
+</section>
+<section class="st-land-card" style="grid-column:1/-1;">
+<h2>예시</h2>
+<p style="margin:0;">예: PLAYER(2.00), 기본 10,000원. 사이클 손익이 기본 1승 수익(10,000원)에 도달하면 리셋합니다.</p>
+<p class="st-land-note" style="margin-top:10px;">※ 실제 결과는 변동성이 큽니다. 참고용 도구로만 사용해 주세요.</p>
+</section>
+<section class="st-land-card st-faq" style="grid-column:1/-1;">
+<h2>FAQ</h2>
+<details><summary>오스카 그라인드은(는) 몇 연패까지 버티나요?</summary><div class="st-land-note" style="margin-top:8px;">자금(뱅크롤), 기본베팅, 배당(특히 BANKER 1.97)과 단위 올림에 따라 달라집니다. 계산기에서 자금(선택)을 입력하면 세션 손익과 최대 낙폭을 함께 확인할 수 있습니다.</div></details>
+<details><summary>BANKER 1.97에서 베팅이 더 커지는 이유는?</summary><div class="st-land-note" style="margin-top:8px;">승리 수익이 <b>베팅×(배당-1)</b>이기 때문에, BANKER는 (1.97-1)=0.97로 PLAYER(1.0)보다 회복에 필요한 베팅이 커질 수 있습니다.</div></details>
+<details><summary>단위 올림(라운딩)은 왜 필요한가요?</summary><div class="st-land-note" style="margin-top:8px;">실전에서는 특정 단위(1,000/10,000원)로 베팅하는 경우가 많습니다. 라운딩을 적용하면 실제 베팅 환경과 더 잘 맞습니다.</div></details>
+<details><summary>세션/자금 관리 트래커는 뭘 보여주나요?</summary><div class="st-land-note" style="margin-top:8px;">세션 손익(P/L), 최대 낙폭(MDD), 현재 단계와 최근 라운드 로그를 통해 현재 위험도를 한눈에 보여줍니다.</div></details>
+<details><summary>이 전략은 수익을 보장하나요?</summary><div class="st-land-note" style="margin-top:8px;">어떤 배팅기법도 수익을 보장하지 않습니다. 변동성과 한도/규정/커미션 등의 변수가 크므로 책임감 있게 이용해 주세요.</div></details>
+</section>
+</div>
+</main>
+<script defer="" src="/assets/js/j.025d649c8b11.js"></script>
 </body>
 </html>
