--- a/casino/index.html
+++ b/casino/index.html
@@ -2,20 +2,19 @@
 
 <html data-theme="light" lang="ko">
 <head>
-<meta charset="utf-8"/>
+<meta charset="utf-8"/><meta content="카지노 보너스, 카지노 입플, 페이백, 롤링 조건, 출금 규정, 제한 게임, 보너스 조건, 최대 지급, 환전 조건" name="keywords"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>온라인 카지노 입플·페이백·보너스 안내 | 88 커뮤니티</title>
-<meta content="온라인 카지노 유저를 위한 입플/페이백/보너스 조건, 롤링·제한·유의사항과 검증 포인트를 안내합니다. 고액 유저 기준 체크리스트 제공." name="description"/>
+<title>카지노 보너스·페이백 가이드 | 롤링·제한·출금규정 | 88ST</title>
+<meta content="카지노 입플/보너스/페이백 이용 시 꼭 확인해야 할 롤링, 제한 게임, 최대 지급, 기간, 출금 규정을 간단하게 정리했습니다. (판단 보조용)" name="description"/>
 <link href="https://88st.cloud/casino/" rel="canonical"/>
 <meta content="index,follow" name="robots"/>
 <meta content="website" property="og:type"/>
 <meta content="88 커뮤니티" property="og:site_name"/>
-<meta content="온라인 카지노 입플·페이백·보너스 | 88 커뮤니티" property="og:title"/>
-<meta content="조건/주의사항/검증 포인트를 한 번에 정리했습니다." property="og:description"/>
+<meta content="카지노 보너스·페이백 가이드 | 롤링·제한·출금규정 | 88ST" property="og:title"/>
+<meta content="카지노 입플/보너스/페이백 이용 시 꼭 확인해야 할 롤링, 제한 게임, 최대 지급, 기간, 출금 규정을 간단하게 정리했습니다. (판단 보조용)" property="og:description"/>
 <meta content="https://88st.cloud/casino/" property="og:url"/>
 <link href="/favicon.ico" rel="icon" type="image/x-icon"/>
-
-<link rel="stylesheet" href="/assets/css/x.ca5a4ba23b1a.css"/>
+<link href="/assets/css/x.ca5a4ba23b1a.css" rel="stylesheet"/>
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
@@ -42,7 +41,7 @@
 <script defer="" src="/assets/js/j.efba3509e62c.js"></script>
 <link href="/assets/c.a50dd3bc5b33.css" rel="stylesheet"/>
 <script defer="" src="/assets/js/j.8829a3ccde44.js"></script>
-</head>
+<meta content="/img/logo.png" property="og:image"/></head>
 <body>
 <div class="scam-popup" id="scamPopup">
 <div class="scam-box">
@@ -124,6 +123,6 @@
 <div class="footer">© 88 Community · 안내/검증 정보는 운영 상황에 따라 변경될 수 있습니다.</div>
 </div>
 <script src="../assets/js/inline-bundles/b.eaed75994b.js"></script>
-<script src="/assets/js/j.025d649c8b11.js" defer></script>
+<script defer="" src="/assets/js/j.025d649c8b11.js"></script>
 </body>
 </html>
