--- a/landing-a/index.html
+++ b/landing-a/index.html
@@ -4,22 +4,18 @@
 <head>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>카지노·슬롯 입플/보너스·페이백 가이드 + 무료 EV 분석기 | 88</title>
-<meta content="카지노·슬롯·미니게임 유저를 위한 입금플러스(입플)·보너스·페이백 체크 포인트와, 배당/마진/EV를 확인하는 무료 분석기를 제공합니다. 88 인증놀이터도 함께 확인하세요." name="description"/>
+<title>랜딩 페이지 | 이동 안내 | 88ST</title>
+<meta content="클릭 한 번으로 이동하는 88ST 랜딩 페이지입니다." name="description"/>
 <link href="https://88st.cloud/landing-a/" rel="canonical"/>
-<meta content="index,follow" name="robots"/>
+<meta content="noindex,follow" name="robots"/>
 <meta content="website" property="og:type"/>
 <meta content="88 (팔팔커뮤니티)" property="og:site_name"/>
-<meta content="카지노·슬롯 입플/보너스·페이백 가이드 + 무료 EV 분석기 | 88" property="og:title"/>
-<meta content="카지노·슬롯·미니게임 유저를 위한 입금플러스(입플)·보너스·페이백 체크 포인트와, 배당/마진/EV를 확인하는 무료 분석기를 제공합니다. 88 인증놀이터도 함께 확인하세요." property="og:description"/>
+<meta content="랜딩 페이지 | 이동 안내 | 88ST" property="og:title"/>
+<meta content="클릭 한 번으로 이동하는 88ST 랜딩 페이지입니다." property="og:description"/>
 <meta content="https://88st.cloud/landing-a/" property="og:url"/>
 <link href="/favicon.ico" rel="icon" type="image/x-icon"/>
 <link href="/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
-
-
-
-
-<link rel="stylesheet" href="/assets/css/x.b8b39f0ff21f.css"/>
+<link href="/assets/css/x.b8b39f0ff21f.css" rel="stylesheet"/>
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
@@ -48,7 +44,7 @@
 <script defer="" src="/assets/js/j.efba3509e62c.js"></script>
 <link href="/assets/c.a50dd3bc5b33.css" rel="stylesheet"/>
 <script defer="" src="/assets/js/j.8829a3ccde44.js"></script>
-</head>
+<meta content="/img/logo.png" property="og:image"/></head>
 <body>
 <div class="wrap">
 <div class="top">
@@ -57,9 +53,9 @@
 <div class="t">88st.cloud</div>
 </div>
 <div class="nav">
-<a data-utm="1" href="/" data-d8593ac4d="s2GfXHFFt66a">메인</a>
-<a data-utm="1" href="/analysis/" data-d8593ac4d="NooqBvHACmNU">분석기</a>
-<a data-utm="1" href="/cert/" data-d8593ac4d="Ps5sZBjVewop">인증놀이터</a>
+<a data-d8593ac4d="s2GfXHFFt66a" data-utm="1" href="/">메인</a>
+<a data-d8593ac4d="NooqBvHACmNU" data-utm="1" href="/analysis/">분석기</a>
+<a data-d8593ac4d="Ps5sZBjVewop" data-utm="1" href="/cert/">인증놀이터</a>
 </div>
 </div>
 <div class="hero">
@@ -69,10 +65,10 @@
 <div class="pill">입플/보너스</div><div class="pill">페이백</div><div class="pill">고액 유저 기준</div><div class="pill">무료/초간단</div><div class="pill">조건 확인</div>
 </div>
 <div class="ctaRow">
-<a class="btn primary" data-utm="1" href="/analysis/" data-d8593ac4d="2Mf2icfxH39g">
+<a class="btn primary" data-d8593ac4d="2Mf2icfxH39g" data-utm="1" href="/analysis/">
            무료 분석기 사용하기
         </a>
-<a class="btn secondary" data-utm="1" href="/cert/" data-d8593ac4d="ZDwzR28v2tl7">
+<a class="btn secondary" data-d8593ac4d="ZDwzR28v2tl7" data-utm="1" href="/cert/">
            88 인증놀이터 바로보기
         </a>
 </div>
@@ -109,13 +105,13 @@
 <div class="footer">
 <div>© 88 (팔팔커뮤니티) · 88st.cloud</div>
 <div class="smallLinks">
-<a data-utm="1" href="/landing-a/" data-d8593ac4d="0Cb_wGqVSWM0">입플·보너스</a>
-<a data-utm="1" href="/landing-b/" data-d8593ac4d="M2tqoQKkVtzd">고액/보증업체</a>
-<a data-utm="1" href="/landing-c/" data-d8593ac4d="VRuHYPCwbUa9">마진·EV</a>
-<a data-utm="1" href="/landing-d/" data-d8593ac4d="xV-XOhoSeUB5">배당 흐름</a>
+<a data-d8593ac4d="0Cb_wGqVSWM0" data-utm="1" href="/landing-a/">입플·보너스</a>
+<a data-d8593ac4d="M2tqoQKkVtzd" data-utm="1" href="/landing-b/">고액/보증업체</a>
+<a data-d8593ac4d="VRuHYPCwbUa9" data-utm="1" href="/landing-c/">마진·EV</a>
+<a data-d8593ac4d="xV-XOhoSeUB5" data-utm="1" href="/landing-d/">배당 흐름</a>
 </div>
 </div>
 </div>
-<script src="/assets/js/j.025d649c8b11.js" defer></script>
+<script defer="" src="/assets/js/j.025d649c8b11.js"></script>
 </body>
 </html>
