--- a/landing-b/index.html
+++ b/landing-b/index.html
@@ -4,22 +4,18 @@
 <head>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>고액 유저 기준 보증업체 검증 체크리스트 | 88 인증놀이터</title>
-<meta content="고액 유저 관점에서 보증업체/인증놀이터를 선택할 때 꼭 봐야 하는 체크리스트를 정리했습니다. 메인에서 검증 카드와 문의 채널을 빠르게 확인하세요." name="description"/>
+<title>랜딩 페이지 | 이동 안내 | 88ST</title>
+<meta content="클릭 한 번으로 이동하는 88ST 랜딩 페이지입니다." name="description"/>
 <link href="https://88st.cloud/landing-b/" rel="canonical"/>
-<meta content="index,follow" name="robots"/>
+<meta content="noindex,follow" name="robots"/>
 <meta content="website" property="og:type"/>
 <meta content="88 (팔팔커뮤니티)" property="og:site_name"/>
-<meta content="고액 유저 기준 보증업체 검증 체크리스트 | 88 인증놀이터" property="og:title"/>
-<meta content="고액 유저 관점에서 보증업체/인증놀이터를 선택할 때 꼭 봐야 하는 체크리스트를 정리했습니다. 메인에서 검증 카드와 문의 채널을 빠르게 확인하세요." property="og:description"/>
+<meta content="랜딩 페이지 | 이동 안내 | 88ST" property="og:title"/>
+<meta content="클릭 한 번으로 이동하는 88ST 랜딩 페이지입니다." property="og:description"/>
 <meta content="https://88st.cloud/landing-b/" property="og:url"/>
 <link href="/favicon.ico" rel="icon" type="image/x-icon"/>
 <link href="/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
-
-
-
-
-<link rel="stylesheet" href="/assets/css/x.b8b39f0ff21f.css"/>
+<link href="/assets/css/x.b8b39f0ff21f.css" rel="stylesheet"/>
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
@@ -48,7 +44,7 @@
 <script defer="" src="/assets/js/j.efba3509e62c.js"></script>
 <link href="/assets/c.a50dd3bc5b33.css" rel="stylesheet"/>
 <script defer="" src="/assets/js/j.8829a3ccde44.js"></script>
-</head>
+<meta content="/img/logo.png" property="og:image"/></head>
 <body>
 <div class="wrap">
 <div class="top">
@@ -57,9 +53,9 @@
 <div class="t">88st.cloud</div>
 </div>
 <div class="nav">
-<a data-utm="1" href="/" data-d8593ac4d="tDlguE3qg289">메인</a>
-<a data-utm="1" href="/analysis/" data-d8593ac4d="2l0TDTmG20GK">분석기</a>
-<a data-utm="1" href="/cert/" data-d8593ac4d="TrA-QtVqiSXv">인증놀이터</a>
+<a data-d8593ac4d="tDlguE3qg289" data-utm="1" href="/">메인</a>
+<a data-d8593ac4d="2l0TDTmG20GK" data-utm="1" href="/analysis/">분석기</a>
+<a data-d8593ac4d="TrA-QtVqiSXv" data-utm="1" href="/cert/">인증놀이터</a>
 </div>
 </div>
 <div class="hero">
@@ -69,10 +65,10 @@
 <div class="pill">고액 유저 기준</div><div class="pill">검증 체크리스트</div><div class="pill">운영 이력</div><div class="pill">문의 채널</div><div class="pill">리스크 감소</div>
 </div>
 <div class="ctaRow">
-<a class="btn primary" data-utm="1" href="/analysis/" data-d8593ac4d="GPhfEAUDCz4I">
+<a class="btn primary" data-d8593ac4d="GPhfEAUDCz4I" data-utm="1" href="/analysis/">
            무료 분석기 사용하기
         </a>
-<a class="btn secondary" data-utm="1" href="/cert/" data-d8593ac4d="IBqqLJ1sv9hn">
+<a class="btn secondary" data-d8593ac4d="IBqqLJ1sv9hn" data-utm="1" href="/cert/">
            88 인증놀이터 바로보기
         </a>
 </div>
@@ -109,13 +105,13 @@
 <div class="footer">
 <div>© 88 (팔팔커뮤니티) · 88st.cloud</div>
 <div class="smallLinks">
-<a data-utm="1" href="/landing-a/" data-d8593ac4d="DCpB9Ia44Dlk">입플·보너스</a>
-<a data-utm="1" href="/landing-b/" data-d8593ac4d="RcOU9v-aI3Ci">고액/보증업체</a>
-<a data-utm="1" href="/landing-c/" data-d8593ac4d="J28LX0swbI03">마진·EV</a>
-<a data-utm="1" href="/landing-d/" data-d8593ac4d="i0yF31r4DvND">배당 흐름</a>
+<a data-d8593ac4d="DCpB9Ia44Dlk" data-utm="1" href="/landing-a/">입플·보너스</a>
+<a data-d8593ac4d="RcOU9v-aI3Ci" data-utm="1" href="/landing-b/">고액/보증업체</a>
+<a data-d8593ac4d="J28LX0swbI03" data-utm="1" href="/landing-c/">마진·EV</a>
+<a data-d8593ac4d="i0yF31r4DvND" data-utm="1" href="/landing-d/">배당 흐름</a>
 </div>
 </div>
 </div>
-<script src="/assets/js/j.025d649c8b11.js" defer></script>
+<script defer="" src="/assets/js/j.025d649c8b11.js"></script>
 </body>
 </html>
